--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pimienta & sal</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -48,23 +48,25 @@
         </div>
 
         <div class="ps-col m6 ps-padding-large">
-          <h1 class="ps-center">Pimienta & Sal</h1>
+          <h1 class="ps-center"><%= tituloDelSitio %></h1>
           <br />
           <p class="ps-large">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur
+            <%= primerParrafo %>
+            <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute iruredolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.We only use
-            <span class="ps-tag ps-light-grey">seasonal</span> ingredients.
+            <span class="ps-tag ps-light-grey">seasonal</span> ingredients. -->
           </p>
           <p class="ps-large ps-text-grey ps-hide-medium">
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            <%= segundoParrafo %>
+            <!-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
             officia deserunt mollit anim id est laborum consectetur adipiscing
             elit, sed do eiusmod temporincididunt ut labore et dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat.
+            laboris nisi ut aliquip ex ea commodo consequat. -->
           </p>
         </div>
       </div>
@@ -73,9 +75,14 @@
       <!-- Menu Section -->
       <div class="ps-row ps-padding-64" id="menu">
         <div class="ps-col l6 ps-padding-large">
-          <h1 class="ps-center">Nuentro Menu</h1>
+          <h1 class="ps-center">Nuestro Menu</h1>
           <br />
-          <h4>Carpaccio fresco</h4>
+          <% menu.forEach(element => { %>
+            <h4> <a href="detalle/<%= element.id %>"><%=element.titulo %></a></h4>
+            <p class ="ps-text-grey"><%= element.descripcion%> <%= element.precio %></p>
+            <br />
+          <% }); %> 
+          <!-- <h4>Carpaccio fresco</h4>
           <p class="ps-text-grey">
             Entrada Carpaccio de salmón con cítricos U$S 65.50
           </p>
@@ -97,7 +104,7 @@
           <p class="ps-text-grey">
             Espárragos blancos con vinagreta de verduras y jamón ibérico U$S
             37.50
-          </p>
+          </p> -->
         </div>
 
         <div class="ps-col l6 ps-padding-large ps-img-menu">
