--- a/views/detalleMenu.ejs
+++ b/views/detalleMenu.ejs
@@ -52,7 +52,7 @@
 
         <div class="ps-col l6 ps-padding-large ps-img-menu">
           <img
-            src="/images/menu.jpg"
+            src="<%= productoSeleccionado.product_img %>"
             class="ps-round ps-image ps-opacity-min"
             alt="Menu"
           />
